--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ section ul li {
 }
 
 img {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
+    margin-right: 20px;
 }
