--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 * {
-    border: 2px solid orange;
+    border: 2px solid black;
+}
+
+header {
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(black , #4d9900);
+    font-size: 2em;
+    color: #ffff00;
 }
 
 h1 {
@@ -10,6 +18,7 @@ h1 {
 }
 
 p {
+    font-size: 1.2em;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -27,4 +36,25 @@ img {
     width: 200px;
     height: 200px;
     margin-right: 20px;
+    border: 5px solid black;
+    box-shadow: 5px 5px black;
+}
+
+#canvasSection{
+    width: 80%;
+    height: 80%;
+    text-align: center;
+    margin: 0px auto;
+}
+
+canvas {
+    display:inline;
+
+}
+
+footer { 
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, black , #4d9900);
+    
 }
