--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-    border: 2px solid orange;
+    border: 2px solid black;
 }
 
 header {
@@ -43,19 +43,17 @@ img {
 
 #canvasSection{
     width: 80%;
-    height: 80%;
+    height: 50%;
     text-align: center;
     margin: 0px auto;
 }
 
 canvas {
     display:inline;
-
 }
 
 footer { 
     width: 100%;
     height: 100px;
     background: linear-gradient(to top, black , #4d9900);
-    
 }
